tests/fail/invalid_return_type.jlite
class Main {
    Void main(Int a) {
        return 1;
    }
}
